ingress-https-demo01/demo.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: demo
  name: demo
  namespace: web
spec:
  containers:
    - image: nginx
      name: demo    
      volumeMounts:
        - name: vm-secrets-demo01
          mountPath: "/mnt/secrets-store"
          readOnly: true
  volumes:
  - name: vm-secrets-demo01
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: "demo01kv"
