ingress-https-demo01/demo.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: web
spec:
  type: ClusterIP
  selector:
    tier: demo
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
